<resources>
    <string name="app_name">FreshBerries</string>

    //Strings para cuadros de texto editables
    <string name="txtUsuario">Usuario</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="txtIdProveedor">ID Proveedor</string>
    <string name="txtNombreProveedor">Nombre</string>
    <string name="txtTelefonoProveedor">Telefono</string>
    <string name="txtDireccionProveedor">Direccion</string>
    <string name="txtIdVenta">ID Venta</string>
    <string name="txtFechaVenta">Fecha de Venta</string>
    <string name="txtTotalVenta">Total de Venta</string>
    <string name="txtIdUsuario">ID Empleado</string>
    <string name="txtIdCliente">ID Cliente</string>


    //Strings para Botones
    <string name="btnLogIn">Iniciar Sesión</string>
    <string name="btnRegistrarProveedor">Registrar Proveedor</string>
    <string name="btnBuscarProveedor">Buscar Proveedor</string>
    <string name="btnListarProveedor">Listar Proveedor</string>
    <string name="btnActualizarProveedor">Actualizar Proveedor</string>
    <string name="btnRegistrarVenta">Registrar Venta</string>
    <string name="btnBuscarVenta">Buscar Venta</string>
    <string name="btnListarVentas">Listar Ventas</string>
    <string name="btnActualizarVenta">Actualizar Venta</string>
    <string name="btnAddProducto">Añadir Producto</string>
    <string name="btnFinalizar">Finalizar</string>



    <string name="title_activity_main_administrador">MainActivityAdministrador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Inicio</string>
    <string name="menu_proveedores">Proveedores</string>
    <string name="menu_Clientes">Clientes</string>
    <string name="menu_Producto">Productos</string>
    <string name="menu_Ventas">Ventas</string>
    <string name="menu_Usuarios">Usuarios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_empleado">MainActivityEmpleado</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main_empleados">MainActivityEmpleados</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>