<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation3"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.freshberries.Activities.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />



    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.example.freshberries.Activities.ui.clientes.ClientesFragment"
        android:label="@string/menu_Clientes"
        tools:layout="@layout/fragment_clientes" />

    <fragment
        android:id="@+id/nav_producto"
        android:name="com.example.freshberries.Activities.ui.producto.ProductoFragment"
        android:label="@string/menu_Producto"
        tools:layout="@layout/fragment_producto" />

    <fragment
        android:id="@+id/nav_ventas"
        android:name="com.example.freshberries.Activities.ui.ventas.VentasFragment"
        android:label="@string/menu_Ventas" />


</navigation>