<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listRecycleViewProductos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo2"
    tools:context=".Activities.ui.ventas.BuscarVentaActivity">

    <Button
        android:id="@+id/btnActualizarVenta"
        android:layout_width="197dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/colorboton"
        android:text="@string/btnActualizarVenta"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalVenta" />

    <EditText
        android:id="@+id/txtIdVenta"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="208dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtIdVenta"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textColor="#FDFCFC"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtIdEmpleado"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="360dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtIdUsuario"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textColor="#F4F1F1"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtClienteId"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="440dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtIdCliente"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textColor="#FBF9F9"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtFechaVenta"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="288dp"
        android:background="@drawable/edittext"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/txtFechaVenta"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="#F4EFEF"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTotalVenta"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="524dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtTotalVenta"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textColor="#F6F4F4"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>