<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listRecycleViewProductos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo2"
    tools:context=".Activities.ui.proveedores.RegistrarProveedorActivity">

    <EditText
        android:id="@+id/txtIdProveedor"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtIdProveedor"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textColor="#FAF6F6"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtDireccionProveedor"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="448dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtDireccionProveedor"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="#F6F4F4"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTelefonoProveedor"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="352dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtTelefonoProveedor"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:textColor="#F8F5F5"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombreProveedor"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="252dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtNombreProveedor"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="#FAF9F9"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegistrarProveedor"
        android:layout_width="197dp"
        android:layout_height="52dp"
        android:layout_marginTop="592dp"
        android:background="@drawable/colorboton"
        android:text="@string/btnRegistrarProveedor"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>