<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listRecycleViewProductos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo2"
    tools:context=".Activities.ui.clientes.ActivityRegistrarCliente">

    <EditText
        android:id="@+id/txtIdCliente"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="Cedula"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textColor="#FBFAFA"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtDireccionCliente"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtDireccionProveedor"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="#FBF9F9"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTelefonoCliente"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="368dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtTelefonoProveedor"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:textColor="#FAF6F6"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombreCliente"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="264dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtNombreProveedor"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="#F8F4F4"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="197dp"
        android:layout_height="52dp"
        android:layout_marginTop="632dp"
        android:background="@drawable/colorboton"
        app:backgroundTint="@null"
        android:text="@string/btnRegistrarProveedor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>