<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listRecycleViewProductos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo2"
    tools:context=".Activities.ui.ventas.RegistrarVentaActivity">

    <View
        android:id="@+id/view9"
        android:layout_width="423dp"
        android:layout_height="62dp"
        android:layout_marginTop="54dp"
        android:background="#F8F5F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view10" />

    <View
        android:id="@+id/view10"
        android:layout_width="407dp"
        android:layout_height="84dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="1dp"
        android:background="#FAF5F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view11" />

    <View
        android:id="@+id/view11"
        android:layout_width="408dp"
        android:layout_height="75dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="3dp"
        android:background="#FAF8F8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTotalVenta"
        android:layout_width="246dp"
        android:layout_height="45dp"
        android:layout_marginTop="456dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/txtTotalVenta"
        android:inputType="number"
        android:paddingLeft="20dp"


        android:textColor="#FBF9F9"
        android:textColorHint="#ccc"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtFechaVenta"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/edittext"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/txtFechaVenta"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="#1C1C1C"
        android:textColorHint="#0E0E0E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtIdEmpleado"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtIdUsuario"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textColorHint="#ccc"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnAddProducto"
        android:layout_width="197dp"
        android:layout_height="53dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/colorboton"
        android:text="@string/btnAddProducto"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalVenta" />

    <Spinner
        android:id="@+id/spnEmpleados"
        android:layout_width="246dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"


        android:layout_marginTop="240dp"
        android:textColorHint="#ccc"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spnCliente"
        android:layout_width="245dp"
        android:layout_height="51dp"
        android:layout_marginTop="364dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>