<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listRecycleViewProductos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo2"
    tools:context=".Activities.ui.clientes.BuscarClienteActivity">

    <EditText
        android:id="@+id/txtNombreCliente"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="296dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtNombreProveedor"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="#FDFAFA"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtIdCliente"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="184dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="Cedula cliente"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textColor="#FAF8F8"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTelefonoCliente"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="408dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtTelefonoProveedor"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:textColor="#FBF9F9"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/txtDireccionCliente"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="516dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txtDireccionProveedor"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="#F6F5F5"
        android:textColorHint="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnActualizarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="612dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/colorboton"
        app:backgroundTint="@null"
        android:text="Modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>